[project]
name = "hubstaff_tracking"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Michal Freliszka", email = "mfreliszka@gmail.com"},
]
dependencies = [
    "configparser>=7.1.0",
    "httpx>=0.27.2",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
